add spoc and junit5 test